added my project

--- a/index.html
+++ b/index.html
@@ -1,1 +1,45 @@
 <!-- Add your HTML Code here -->
+<!DOCTYPE html>
+<html>
+<head>
+  <title>personal portfolio page</title> 
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+   
+<div class="profileBody">
+  <!--header -->
+  <div class="header">
+<h1>TAJWINDER SINGH</h1>
+<h2>FRONT END ENGINEER</h2>
+
+  </div>
+  <hr>
+
+<!--main section-->
+<div class="section" id="profile">
+ <strong>Profile:</strong> <br><br>
+  <p>Starting my journey as a front-end developer.Want to become proficient in HTML,CSS and JavaScript; plus modern libraries and frameworks.Hardworking,gritty and passionate about providing the best user experience and services.</p>
+  
+</div>
+<hr>
+<div class="section" id="goals">                                                
+    <strong>Goals:</strong><br><br>
+    <p>I'm upskilling at GreyAtom! My goals include:</p>
+    <ul>
+        <li>Learn to code</li>
+        <li>Become a front end developer at google</li>
+        <li>Be kind to others</li>
+    </ul>
+    
+</div>
+<hr>
+<div id="Contact" class="section">
+    <strong>contact Details:</strong><br><br>
+    <p>You can email me at: <a href="mailto: tajwinder222@gmail.com">tajwinder222@gmail.com</a></p>
+</div>
+</div>
+
+
+</body>
+</html>
